--- a/public/webs/barbershop/index.html
+++ b/public/webs/barbershop/index.html
@@ -252,7 +252,7 @@
 		<div class="row no-pad">
 			<div class="col-md-6">
 				<div class="store-image">
-					<img src="/webs/barbershop/images/store.jpg" alt="" />
+					<img src="/webs/barbershop/images/store2.jpg" alt="" />
 				</div>
 			</div>
 
@@ -268,29 +268,33 @@
 				</div>
 
 				<div class="price-list">
-					<div class="price-item">Corte de pelo</div>
-					<div class="price-subitem"> (personas en paro)</div>
+					<div class="price-item">Corte de pelo
+						<div class="price-subitem"> (personas en paro)</div>
+					</div>
 					<div class="price-line"></div>
 					<div class="price-amount">7,00€</div>
 				</div>
 
 				<div class="price-list">
-					<div class="price-item">Corte de pelo</div>
-					<div class="price-subitem"> (mañanas)</div>
+					<div class="price-item">Corte de pelo
+						<div class="price-subitem"> (mañanas)</div>
+					</div>
 					<div class="price-line"></div>
 					<div class="price-amount">6,99€</div>
 				</div>
 
 				<div class="price-list">
-					<div class="price-item">Corte de pelo</div>
-					<div class="price-subitem"> (tardes)</div>
+					<div class="price-item">Corte de pelo
+						<div class="price-subitem"> (tardes)</div>
+					</div>
 					<div class="price-line"></div>
 					<div class="price-amount">7,99€</div>
 				</div>
 
 				<div class="price-list">
-					<div class="price-item">Niños hasta 15 años</div>
-					<div class="price-subitem"> (lunes a martes)</div>
+					<div class="price-item">Niños hasta 15 años
+						<div class="price-subitem"> (lunes a martes)</div>
+					</div>
 					<div class="price-line"></div>
 					<div class="price-amount">6,99€</div>
 				</div>
@@ -302,8 +306,9 @@
 				</div>
 
 				<div class="price-list">
-					<div class="price-item">Corte de pelo jubilados</div>
-					<div class="price-subitem"> (lunes a jueves)</div>
+					<div class="price-item">Corte de pelo jubilados
+						<div class="price-subitem"> (lunes a jueves)</div>
+					</div>
 					<div class="price-line"></div>
 					<div class="price-amount">5,00€</div>
 				</div>
@@ -405,30 +410,30 @@
 			<div class="col-md-4">
 				<div class="contact-form">
 					<h2 class="contact-form-title">Reserva ahora</h2>
-					<p>Puedes llamarnos al <strong><a href="tel:+34602050470">602 05 04 70</a></strong> o rellena este formulario y nos pondremos en contacto lo antes posible</p>
-					<form>
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Tu nombre" />
-						</div>
+					<p>Puedes llamarnos al <strong><a href="tel:+34602050470">602 05 04 70</a></strong> o acércate y te daremos cita en persona</p>
+<!--					<form>-->
+<!--						<div class="form-group">-->
+<!--							<input type="text" class="form-control" placeholder="Tu nombre" />-->
+<!--						</div>-->
 
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Teléfono de contacto" />
-						</div>
+<!--						<div class="form-group">-->
+<!--							<input type="text" class="form-control" placeholder="Teléfono de contacto" />-->
+<!--						</div>-->
 
-						<div class="form-group">
-							<textarea class="form-control" rows="5" placeholder="Escribe aquí tu mensaje"></textarea>
-						</div>
+<!--						<div class="form-group">-->
+<!--							<textarea class="form-control" rows="5" placeholder="Escribe aquí tu mensaje"></textarea>-->
+<!--						</div>-->
 
-						<div class="form-group">
-							<input type="submit" class="btn-contact" value="Enviar" />
-						</div>
-					</form>
+<!--						<div class="form-group">-->
+<!--							<input type="submit" class="btn-contact" value="Enviar" />-->
+<!--						</div>-->
+<!--					</form>-->
 				</div>
 			</div>
 
 			<div class="col-md-8">
 				<div class="google-map">
-					<iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=11%20Calle%20de%20Teresa%20Claramunt+(Peluquer%C3%ADa%20Caballero)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" height="600" style="border:0;width:100%;" allowfullscreen></iframe>
+					<iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=11%20Calle%20de%20Teresa%20Claramunt+(Peluquer%C3%ADa%20Caballero)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" height="400" style="border:0;width:100%;" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
